@@ -11,7 +11,6 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-import fs from "fs/promises";
 import path from "path";
 import mm from "mime-types";
 import { MUSIC_PATH } from "../../config/config";
@@ -20,86 +19,62 @@ import { logError, logInfo } from "../../utils/logger";
 import { albumService } from "../../service/albumService";
 import { songService } from "../../service/songService";
 import { artistService } from "../../service/artistService";
+import { fileService } from "../../service/fileService";
 
 let songPaths: string[];
 let artists: Artist[];
 let albums: Album[];
 
-async function collect(libPath: string) {
+async function collect() {
   try {
-    var paths = await fs.readdir(libPath, { withFileTypes: true });
-  } catch (err) {
-    throw createFailure(err, __filename, collect.name);
-  }
+    let paths = await fileService.getAllFiles(MUSIC_PATH);
 
-  for (var i = 0; i < paths.length; i++) {
-    var fullPath = path.join(libPath, paths[i].name);
+    for (let i = 0; i < paths.length; i++) {
+      //Only considere audio files
+      if (!mm.lookup(path.extname(paths[i])).match("audio")) return;
 
-    if (paths[i].isDirectory()) {
-      try {
-        await collect(fullPath);
-      } catch (err) {
-        logError(err);
-        continue;
+      //If the song doesn't already exist, extract its metadata and create a new song
+      if (songPaths.find((p) => p == paths[i])) return;
+
+      let song = await songService.getMetadataFromFile(paths[i]);
+
+      logInfo(`Found new song ${song.path}`, "Song Collector");
+
+      //Fetch the song's album
+      let album = findAlbumByName(song.album, song.artist);
+      let albumId = album?.id;
+      if (!album) {
+        album = { artist: song.artist, title: song.album, year: song.year };
+
+        albumId = await albumService.createAlbum(album);
+
+        logInfo(`Found new album ${album.title}`, "Song Collector");
+
+        await updateAlbums();
       }
+
+      //Fetch the song's artist
+      let artist = findArtistByName(song.artist);
+      let artistId = artist?.id;
+      if (!artist) {
+        artist = { name: song.artist };
+
+        artistId = await artistService.createArtist(artist);
+
+        logInfo(`Found new artist ${artist.name}`, "Song Collector");
+
+        await updateArtists();
+      }
+
+      album.artistId = artistId;
+      await albumService.updateAlbum(album);
+
+      song.artistId = artistId;
+      song.albumId = albumId;
+      await songService.createSong(song);
     }
-
-    if (paths[i].isFile())
-      await registerSong(path.resolve(fullPath)).catch(() => {});
-  }
-}
-
-async function registerSong(songPath: string) {
-  try {
-    //Only considere audio files
-    if (!mm.lookup(path.extname(songPath)).match("audio")) return;
-
-    //If the song doesn't already exist, extract its metadata and create a new song
-    if (songPaths.find((p) => p == songPath)) return;
-
-    let song = await songService.getMetadataFromFile(songPath);
-
-    logInfo(`Found new song ${song.path}`, "Song Collector");
-
-    //Fetch the song's album
-    let album = findAlbumByName(song.album, song.artist);
-    let albumId = album?.id;
-    if (!album) {
-      album = { artist: song.artist, title: song.album, year: song.year };
-
-      albumId = await albumService.createAlbum(album);
-
-      logInfo(`Found new album ${album.title}`, "Song Collector");
-
-      await updateAlbums();
-    }
-
-    //Fetch the song's artist
-    let artist = findArtistByName(song.artist);
-    let artistId = artist?.id;
-    if (!artist) {
-      artist = { name: song.artist };
-
-      artistId = await artistService.createArtist(artist);
-
-      logInfo(`Found new artist ${artist.name}`, "Song Collector");
-
-      await updateArtists();
-    }
-
-    album.artistId = artistId;
-    await albumService.updateAlbum(album);
-
-    song.artistId = artistId;
-    song.albumId = albumId;
-    await songService.createSong(song);
   } catch (err) {
-    throw createFailure(
-      "Song collection error",
-      __filename,
-      registerSong.name,
-      err
-    );
+    throw createFailure("Song collection error", __filename, collect.name, err);
   }
 }
 
@@ -148,7 +123,7 @@ export default async function doWork() {
     await updateAlbums();
     await updateArtists();
 
-    await collect(MUSIC_PATH);
+    await collect();
   } catch (err) {
     logError(err);
   }
