@@ -7,6 +7,7 @@ BackEnd:
 - Cover are now declined in different sizes when fetch
 - Automatic cover updates
 - Turned DAO/Access/Service into singleton class
+- Added cover cleaner cleaning dead files and dead images
 
 FrontEnd:
 - Cover are fetched with optimal size to reduce bandwith consumption and loading time
